tests/paczka1/fuzzy1/39388779.err
Error in line 4: JDWPPPzfkI S592 53,0
Error in line 10: JDWPPPzfkI A434 286,8
Error in line 21: s8M58ocH S592 36,3
Error in line 12: v5lmNy A752 44,1
Error in line 20: 7vHcorBS2 A434 21,5
